--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,14 @@
-Flask==2.3.2
-Flask-SQLAlchemy==3.0.3
-Flask-Migrate==4.0.4
-Flask-Login==0.6.2
-python-dotenv==1.0.0
-gunicorn==20.1.0
-psycopg2-binary
-waitress==2.1.2 
+Flask~=3.0.2
+Werkzeug~=3.0.3
+Flask-SQLAlchemy~=3.1.1
+Flask-Migrate~=4.0.5  # This was missing
+Flask-Login~=0.6.3
+python-dotenv~=1.0.0
+gunicorn~=21.2.0
+waitress~=2.1.2
+psycopg2-binary~=2.9.9
+pytest~=8.3.0
+pytest-cov~=4.1.0
+flask_bcrypt
+flask-wtf 
+email-validator
