--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask~=3.0.2
 Werkzeug~=3.0.3
 Flask-SQLAlchemy~=3.1.1
-Flask-Migrate~=4.0.5  # This was missing
+Flask-Migrate~=4.0.5  
 Flask-Login~=0.6.3
 python-dotenv~=1.0.0
 gunicorn~=21.2.0
